--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <h2>PDF Files</h2>
         <ul>
             <!-- Replace these with your actual file names -->
-            <li><a data-file="files/oops in Python.pdf">Oops in Python</a></li>
-            <li><a data-file="files/python full.pdf">Python</a></li>
+            <li><a <embed data-file="oops in Python.pdf">Oops in Python</a></li>
+            <li><a <embed data-file="python full.pdf">Python</a></li>
         </ul>
     </div>
     <div class="preview">
